--- a/DemoMvcApplication/DemoMvcApplication/Content/Site.css
+++ b/DemoMvcApplication/DemoMvcApplication/Content/Site.css
@@ -1,11 +1,6 @@
-﻿/*----------------------------------------------------------
-The base color for this template is #5c87b2. If you'd like
-to use a different color start by replacing all instances of
-#5c87b2 with your new color.
-----------------------------------------------------------*/
-body
+﻿body
 {
-    background-color: #5c87b2;
+    background-color: rgb(81, 143, 71);
     font-size: .75em;
     font-family: Verdana, Helvetica, Sans-Serif;
     margin: 0;
@@ -131,7 +126,7 @@ page width. Or, you can specify an exact pixel width. */
 ----------------------------------------------------------*/
 ul#menu
 {
-    border-bottom: 1px #5C87B2 solid;
+    border-bottom: 1px rgb(81, 143, 71) solid;
     padding: 0 0 2px;
     position: relative;
     margin: 0;
