--- a/DemoMvcApplication/DemoMvcApplication/Views/Shared/Site.Master
+++ b/DemoMvcApplication/DemoMvcApplication/Views/Shared/Site.Master
@@ -24,6 +24,7 @@
                 <ul id="menu">              
                     <li><%: Html.ActionLink("Home", "Index", "Home")%></li>
                     <li><%: Html.ActionLink("Crash Data", "Index", "StatePedCycleCrashes")%></li>
+                    <li><%: Html.ActionLink("Word Change", "Index", "WordChange")%></li>
                     <li><%: Html.ActionLink("About", "About", "Home")%></li>
                 </ul>
             
