--- a/DemoMvcApplication/DemoMvcApplication/Views/Shared/Site.Master
+++ b/DemoMvcApplication/DemoMvcApplication/Views/Shared/Site.Master
@@ -5,6 +5,7 @@
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="<%= Url.Content ("~/Scripts/Graphics/contour/contour.css") %>" rel="stylesheet" />
 </head>
 
 <body>
